release: bump version to 0.19.0